# aivell

./: .gitignore  Cargo.toml  README.md  dump.aiv
crates/aivell/: Cargo.toml
crates/aivell/src/: koto.rs  lib.rs  prelude.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: chunk.rs  compiler.rs  frame.rs  instruction.rs  instruction_reader.rs  lib.rs  loader.rs  op.rs
crates/deriver/: Cargo.toml
crates/deriver/src/: attributes.rs  koto_copy.rs  koto_impl.rs  koto_type.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: delimiters.rs  lib.rs  literal.rs  operators.rs  punctuation.rs  reserved.rs  token.rs  tokens.rs
crates/memory/: Cargo.toml
crates/memory/src/: address.rs  lib.rs
crates/memory/src/arc/: mod.rs  ptr.rs  ptr_mut.rs
crates/memory/src/rc/: mod.rs  ptr.rs  ptr_mut.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  constant_pool.rs  error.rs  lib.rs  node.rs  parser.rs  string_format_options.rs  string_slice.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: display_context.rs  error.rs  lib.rs  prelude.rs  send_sync.rs  vm.rs
crates/runtime/src/core_lib/: io.rs  iterator.rs  koto.rs  list.rs  map.rs  mod.rs  number.rs  os.rs  range.rs  string.rs  test.rs  tuple.rs  value_sort.rs
crates/runtime/src/core_lib/iterator/: adaptors.rs  generators.rs  peekable.rs
crates/runtime/src/core_lib/string/: iterators.rs
crates/runtime/src/io/: mod.rs
crates/runtime/src/types/: function.rs  iterator.rs  list.rs  map.rs  meta_map.rs  mod.rs  native_function.rs  number.rs  object.rs  range.rs  string.rs  tuple.rs  value.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  util.rs
