[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
ariadne = "0.4.1"
smallvec = "1.13.2"
thiserror = "1.0.63"
derive-name = "1.1.0"
unicode-segmentation = "1.11.0"
rustc-hash = "2.0.0"
dunce = "1.0.4"
indexmap = "2.2.6"
downcast-rs = "1.2.1"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"
instant = "0.1.13"
chrono = "0.4.38"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread"] }